--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "html2canvas": "^1.0.0-rc.7",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
