--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "html2canvas": "^1.0.0-rc.7",
     "next": "latest",
     "react": "^16.8.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
     "styled-components": "^5.0.0"
